[package]
name = "tui-link"
version = "0.0.1"
edition = "2024"
authors = ["Benjamin Große <ste3ls@gmail.com>"]
description = "A link widget for Ratatui TUI programs"
repository = "https://github.com/benjajaja/tui-link"
homepage = "https://github.com/benjajaja/tui-link"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = ["assets/*"]
rust-version = "1.86.0"

[dependencies]
# ratatui-core = { version = "0.1.0-beta.0" }
ratatui-core = { git = "https://github.com/ratatui/ratatui.git", rev = "9713828c838d567ec4d782869f1e2f267cc022b3" }
unicode-width = ">=0.2.0, <=0.2.2"

[dev-dependencies]
rstest = "0.26"
ratatui = { git = "https://github.com/ratatui/ratatui.git", rev = "9713828c838d567ec4d782869f1e2f267cc022b3" }

